syntax = "proto3";

package todo.v1;

import "google/protobuf/timestamp.proto";

service TodoService {
  rpc CreateTodo(CreateTodoRequest) returns (Todo);
  rpc GetTodo(GetTodoRequest) returns (Todo);
  rpc ListTodos(ListTodosRequest) returns (ListTodosResponse);
  rpc UpdateTodo(UpdateTodoRequest) returns (Todo);
  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);
}

message Todo {
  string id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  Priority priority = 5;
  repeated string tags = 6;
  google.protobuf.Timestamp created_at = 7;
}

enum Priority {
  PRIORITY_UNSPECIFIED = 0;
  PRIORITY_LOW = 1;
  PRIORITY_MEDIUM = 2;
  PRIORITY_HIGH = 3;
}

message CreateTodoRequest {
  string title = 1;
  string description = 2;
  Priority priority = 3;
  repeated string tags = 4;
}

message GetTodoRequest {
  string id = 1;
}

message ListTodosRequest {
  bool completed_only = 1;
  int32 limit = 2;
}

message ListTodosResponse {
  repeated Todo todos = 1;
  int32 total_count = 2;
}

message UpdateTodoRequest {
  string id = 1;
  string title = 2;
  bool completed = 3;
}

message DeleteTodoRequest {
  string id = 1;
}

message DeleteTodoResponse {}
